# planet

./: .App.cpp.swp  .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  .tags  .tags1  .travis.yml  Animation.h  AnimationImporter.cpp  AnimationManager.cpp  AnimationManager.h  App.cpp  App.h  Application.h  BoundingBox.h  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  Camera.cpp  Camera.h  ChunkedLODTerrainRenderer.h  DebugRenderer.cpp  DebugRenderer.h  FileUtils.h  Frustum.cpp  Frustum.h  GLHelpers.h  GPUTileBuffer.h  Helpers.h  LRUTileCache.h  Log.h  Makefile  README  README.md  SystemGLFW3.cpp  SystemSDL2.cpp  Terrain.h  TerrainManager.h  (+16 more)
.github/workflows/: builder.yml
CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelWithDebInfo
assets/arthas/: arthas.fbx
assets/roxas/: Roxas High Poly.mtl  Roxas High Poly.smd
assets/roxasps3/: roxasps3.fbx
assets/sponza/: sponza.mtl
cmake/: FindFreeType.cmake  FindGLFW3.cmake  FindLibNoise.cmake
code/: CMakeLists.txt
code/app/include/: Camera.h
code/app/include/input/: InputManager.h
code/app/src/: App.cpp  Camera.cpp  Frustum.cpp  main.cpp
code/app/src/input/: InputManager.cpp  InputManager.h  PlayerController.cpp
code/app/src/platform/sdl/: SystemSDL2.cpp
code/app/src/rendering/: ChunkedLODTerrainRenderer.h  DebugRenderer.cpp  DebugRenderer.h  GPUTileBuffer.h  LRUTileCache.h
code/app/src/rendering/backend/GL/: GLRenderDevice.cpp  GLRenderDevice.h
code/app/src/utilities/: Callback.h  File.cpp  File.h
code/common/include/common/: Log.h
code/common/src/: .gitkeepme
code/graphics/: CMakeLists.txt
code/graphics/include/: MemLayout.h
code/graphics/include/DX11/: DX11RenderDevice.h
code/graphics/include/graphics/: AttribLayout.h  RenderDevice.h
code/graphics/include/graphics/GL/: GLRenderDevice.h  GLUtils.h
code/graphics/src/DX11/: DX11InputLayoutCache.cpp  DX11RenderDevice.cpp
code/graphics/src/GL/: GLRenderDevice.cpp
dg.xcodeproj/: project.pbxproj
gfx/: AttribLayout.h  MemLayout.h  ParamType.h  RenderDevice.h  VertLayout.h  scrathpad
gfx/dx11/: DX11ConstantBufferCache.cpp  DX11ConstantBufferCache.h  DX11ConstantBufferHelpers.h  DX11InputLayoutCache.cpp  DX11InputLayoutCache.h  DX11RenderDevice.cpp  DX11RenderDevice.h
gfx/gl/: GLRenderDevice.cpp  GLRenderDevice.h  GLUtils.h  RenderDeviceGL.cpp  RenderDeviceGL.h
input/: InputContext.h  InputManager.cpp  InputManager.h  PlayerController.cpp
projects/backend/: backend.lua
projects/dstd/: dstd.lua
projects/planet/: planet.lua
rawr/: Camera.cpp  Helpers.h
rawr.xcodeproj/: project.pbxproj
rawr/input/: InputManager.h  PlayerController.h
rawr/rendering/: ChunkedLODTerrainRenderer.h  GPUTileBuffer.h
rawr/utilities/: File.cpp  File.h
scripts/: format_diff.sh
shaders/: debug_vs.glsl  planet_tes.glsl  terrain_fs.glsl  terrain_vs.glsl
shaders/DX11/: terrain_fs.hlsl  terrain_ps.hlsl  terrain_vs.hlsl
shaders/GL/: debug_fs.glsl  planet_vs.glsl  terrain_fs.glsl  terrain_vs.glsl
src/: App.cpp  App.h  Application.h  BoundingBox.h  Bytebuffer.h  Camera.h  ChunkedTerrain.h  ComponentType.h  DMath.h  EventBus.h  Frustum.cpp  Frustum.h  Helpers.h  IdObj.h  Image.h  Image_stb.cpp  Log.h  SimObj.h  Simulation.h  Task.h  main.cpp
src/animation/: AnimationManager.cpp  AnimationManager.h
src/components/: AnimationComponent.h  BoundingBoxComponent.h  ChunkedTerrain.h  ComponentManager.h  ComponentType.h  PlayerControlled.h  SkinnedMesh.h  Skybox.h  Spatial.h  Transform.h  UI.h
src/events/: BaseEvent.h  EventManager.h  EventType.h  InputEvent.h  PacketEvent.h  UIEvent.h
src/ext/: stb_image.h  stb_image_write.h
src/input/: InputCodes.h  InputContext.h  InputManager.cpp  InputManager.h  KeyboardManager.cpp  KeyboardManager.h  PlayerController.cpp  PlayerController.h  PlayerCtrlManager.cpp  PlayerCtrlManager.h
src/math/: DMath.h  Rectangle.h
src/platform/: System.h
src/profiler/: Profiler.cpp  Profiler.h
src/render/: Camera.cpp  Camera.h  ComputeQueue.h  ConstantBuffer.h  ConstantBufferManager.h  DebugDrawInterface.h  Frustum.cpp  Frustum.h  IndexedMeshData.h  Material.h  MaterialCache.cpp  MaterialCache.h  MaterialData.h  MaterialImporter.h  Mesh.h  MeshCache.cpp  MeshCache.h  MeshGeneration.cpp  MeshGeneration.h  MeshGeometry.h  MeshGeometryData.h  MeshImporter.cpp  Rectangle.h  RenderCache.h  RenderEngine.cpp  RenderEngine.h  RenderObj.h  RenderPass.h  RenderQueue.h  RenderServiceLocator.h  RenderView.h  Renderer.cpp  Renderer.h  RendererType.h  ShaderCache.h  VertexLayoutCache.h  Viewport.h
src/rendering/: ChunkedLODTerrainRenderer.h  ChunkedLoDTerrainRenderer.cpp  ChunkedLoDTerrainRenderer.h  ConstantBuffer.h  ConstantBufferManager.h  GPUTileBuffer.h  LRUTileCache.h  Material.h  MaterialCache.cpp  MaterialCache.h  MaterialImporter.h  Mesh.cpp  Mesh.h  MeshCache.cpp  MeshCache.h  MeshGeneration.cpp  MeshGeneration.h  MeshImporter.cpp  MeshImporter.h  ModelLoader.h  PipelineStateCache.h  RenderEngine.cpp  RenderEngine.h  RenderObj.h  RenderQueue.h  RenderServiceLocator.h  Renderer.cpp  Renderer.h  RendererType.h  ShaderCache.h  SkyboxRenderer.cpp  SkyboxRenderer.h  TextRenderer.h  UIRenderer.h  VertexLayoutCache.h
src/scheduler/: TaskQueue.h  TaskScheduler.h
src/simulation/: SimObj.h  SimulationManager.cpp  SimulationManager.h
src/ui/: ChatFrameUI.h  ConsoleUI.h  DebugUI.h  EditBox.cpp  EditBox.h  FontDesc.h  Label.cpp  Label.h  LabelUI.h  ScriptApi.cpp  ScriptApi.h  ScriptHandler.h  UIDomTree.cpp  UIDomTree.h  UIFrame.h  UIManager.cpp  UIManager.h
src/utilities/: BlockingQueue.h  Bytebuffer.h  Callback.h  Config.h  ConsoleCommands.h  DGAssert.h  EnumTraits.h  File.h  GuidProvider.h  Hash.h  IniParser.h  LRUCache.h  Log.h  Logger.cpp  Pool.h  StringUtil.h  WatchDirManager.h
utilities/: File.cpp
vs2015/: Package.appxmanifest  freetype.vcxproj  freetype.vcxproj.filters  planet-uwp.sln  planet-uwp.vcxproj  planet-uwp.vcxproj.filters  planet-uwp_TemporaryKey.pfx  planet.sln  planet.vcxproj  planet.vcxproj.filters
(+638 files in other folders)
